style.css
@import url("https://fonts.googleapis.com/css2?family=Cardo:ital,wght@0,400;0,700;1,400&family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");

body {
	font-family: "Montserrat", serif;
}

h1,
h2,
h3 {
	font-family: "Fira Sans", serif;
}

h4,
h5 {
	font-family: "Cardo", serif;
}

header {
	position: sticky;
	background-color: #ededed;
	z-index: 99;
}

header > div > form {
	width: 100%;
	display: flex;
	justify-content: center;
}

header > div > a > picture > img {
	height: 7em;
	float: left;
}

header > div > form > input[type="text"] {
	font-family: "Montserrat", serif;
	border: none;
	box-shadow: inset 0 4px 4px rgba(0, 0, 0, 0.24);
	width: 33%;
	border-radius: 50px;
	padding: 1%;
	background-color: #fbe6bd;
	position: relative;
	display: inline-block;
}

#search-filters {
	display: none;
	font-family: "Montserrat", serif;
	position: absolute;
	background-color: #fbe6bd;
	border: none;
	box-shadow: inset 0 4px 4px rgba(0, 0, 0, 0.24);
	padding: 1%;
	border-radius: 25px;
	width: 28.5%;
	top: 50%;
}

#search-filters > ul {
	display: flex;
	flex-direction: column;
}

input[type="text"]:focus {
	outline: 0;
}

input[type="text"]:focus + #search-filters {
	display: block;
}

/* Put in search bar */
header > div > form > img {
	height: 2em;
}

nav {
	font-family: "Fira Sans", serif;
	font-size: 1.25em;
	height: 2em;
}

nav > ul {
	display: flex;
	flex-direction: row;
	justify-content: space-evenly;
	align-items: center;
	height: 100%;
	padding-top: 0.25%;
}

nav > ul > li {
	text-align: center;
	list-style-type: none;
	flex-grow: 1;
}

nav > ul > li > a {
	color: #474747;
	text-decoration: none;
	align-items: center;
}

main {
	position: relative;
	text-align: center;
}

main > div {
	position: absolute;
	top: 30%;
	left: 50%;
	transform: translate(-50%, -50%);
	background-color: rgba(255, 255, 255, 0.35);
	backdrop-filter: blur(10px);
	border-radius: 25px;
	color: #ededed;
	text-shadow: 0 4px 6px black;
	font-size: 2em;
	padding: 5%;
}

main > button {
	position: absolute;
	top: 55%;
	left: 50%;
	transform: translate(-50%, -50%);
}

main > img {
	width: 100%;
}

/* Trouver moyen pour mettre les ombres sur chaque ligne, peut être en faisant un gradient par ligne et en les ombrant */
.lines {
	height: 100px;
	background-image: linear-gradient(
		to bottom,
		#f2af26,
		#f2af26 33%,
		#ad343e 33%,
		#ad343e 66%,
		#3f88c5 66%,
		#3f88c5 100%
	);
	background-size: 100% 100px;
}

.header-wrapper {
	display: flex;
	align-items: center;
	justify-content: space-between;
	padding-right: 1%;
}

.shadow {
	box-shadow: 0 2px 10px black;
}

.menus {
	display: flex;
	flex-direction: row;
	gap: 1em;
}

.menu-icon {
	height: 2em;
	filter: drop-shadow(0px 0px 5px rgb(0 0 0 / 0.4));
}

.search-icon {
	display: none;
}

.burger {
	display: none;
}

@media (max-width: 600px) {
	header > nav {
		display: none;
	}

	header > div > a {
		background-color: green;
		width: 30%;
	}

	header > div > form {
		display: none;
	}

	header > div > a > picture > img {
		width: 60%;
		background-color: red;
	}

	.header-wrapper {
		justify-content: space-between;
	}

	.search-icon {
		display: block;
	}

	.burger {
		display: block;
	}
}

